# pytheca

./: .gitignore  .justfile  .justfile.license  .pre-commit-config.yaml  README.md  pyproject.toml
src/pytheca/: __init__.py  errors.py  registry.py  settings.py
tests/: conftest.py
tests/pytheca/: test_errors.py  test_integration.py  test_registry.py  test_settings.py
