# SPDX-FileCopyrightText: 2025 SamuelYaron <samuel.yaron@oxur.de>
#
# SPDX-License-Identifier: MIT

[project]
name = "pytheca"
version = "0.1.0"
description = ""
authors = [
    {name = "SamuelYaron",email = "samuel.yaron@oxur.de"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "pytheca", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"

[tool.mypy]
strict = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
source_pkgs = ["pytheca"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
